--- a/CP_Basic/CP_Basic/CP_Basic.vcxproj
+++ b/CP_Basic/CP_Basic/CP_Basic.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CH01_Basic.cpp" />
     <ClCompile Include="CP_Basic.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
