--- a/CP_Basic/CP_Basic/CP_Basic.vcxproj
+++ b/CP_Basic/CP_Basic/CP_Basic.vcxproj
@@ -128,7 +128,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CH01_Basic.cpp" />
+    <ClCompile Include="CH02_Variable.cpp" />
+    <ClCompile Include="CH03_Calculation.cpp" />
     <ClCompile Include="CP_Basic.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="DefineFunction.h" />
+    <ClInclude Include="IO.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
