--- a/CP_Basic/CP_Basic/CP_Basic.vcxproj
+++ b/CP_Basic/CP_Basic/CP_Basic.vcxproj
@@ -142,10 +142,19 @@
     <ClCompile Include="CH13_1_ClassMethod.cpp" />
     <ClCompile Include="CH13_2_Airplain.cpp" />
     <ClCompile Include="CH13_Class.cpp" />
+    <ClCompile Include="CH14_ArrayClass.cpp" />
+    <ClCompile Include="CH15_StringClass.cpp" />
+    <ClCompile Include="CH16_VectorClass.cpp" />
+    <ClCompile Include="CH17-1_OverloadingClass.cpp" />
+    <ClCompile Include="CH17_Overloading.cpp" />
     <ClCompile Include="CP_Basic.cpp" />
     <ClCompile Include="Ex01_Flow.cpp" />
     <ClCompile Include="Ex02_Array.cpp" />
     <ClCompile Include="Ex03_Function.cpp" />
+    <ClCompile Include="Ex07-1_RobotMethod.cpp" />
+    <ClCompile Include="Ex07_Robot.cpp" />
+    <ClCompile Include="Ex08-1_MemberClassMethod.cpp" />
+    <ClCompile Include="Exo8-2_Member.cpp" />
     <ClCompile Include="HomeWork01_Basic.cpp" />
     <ClCompile Include="HomWork01_More.cpp" />
     <ClCompile Include="ScoreClass.cpp" />
@@ -155,7 +164,10 @@
     <ClInclude Include="Ch13_1_ClassHeader.h" />
     <ClInclude Include="Ch13_2_AirPlain.h" />
     <ClInclude Include="Ch13_3_This.h" />
+    <ClInclude Include="Ch17-1_OverloadingClass.h" />
     <ClInclude Include="DefineFunction.h" />
+    <ClInclude Include="Ex08_MemberClass.h" />
+    <ClInclude Include="Exo7-1_RobotClass.h" />
     <ClInclude Include="IO.h" />
     <ClInclude Include="ScoreClass.h" />
   </ItemGroup>
