--- a/CP_Basic/CP_Basic/CP_Basic.vcxproj.filters
+++ b/CP_Basic/CP_Basic/CP_Basic.vcxproj.filters
@@ -111,6 +111,12 @@
     <ClCompile Include="Exo8-2_Member.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Ch18_Inheritance.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Ch18_InheritanceMethod.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IO.h">
@@ -138,6 +144,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Ex08_MemberClass.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Ch18_Inheritance.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
